[package]
name = "psycial"
version = "0.1.0"
edition = "2021"
authors = ["ElderRyan <elderryan@0xbase.ai>"]
description = "Production-grade MBTI personality classifier with GPU-accelerated multi-task neural networks"
license = "GPL-3.0"
repository = "https://github.com/RyanKung/psycial"
homepage = "https://psycial.0xbase.ai"
documentation = "https://docs.rs/psycial"
keywords = ["mbti", "personality", "nlp", "neural-networks", "classification"]
categories = ["science", "text-processing"]
readme = "README.md"

[lib]
name = "psycial"
path = "src/lib.rs"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8"
regex = "1.10"
ndarray = "0.16"
console = { version = "0.16", features = ["std"] }

# Deep learning dependencies  
rust-bert = { version = "0.23", features = ["download-libtorch"] }
tch = "0.17"

# CLI dependencies
clap = { version = "4.0", features = ["derive"], optional = true }

# Auto-download dependencies
hf-hub = { version = "0.3", optional = true }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"], optional = true }

# Note: protobuf 2.28.0 security vulnerability (RUSTSEC-2024-0437) exists via rust_tokenizers
# Unfortunately, rust_tokenizers 8.1.1 hardcodes protobuf 2.x dependency and cannot be upgraded.
# The vulnerability affects protobuf 2.28.0 used internally by rust_tokenizers.
# We cannot fix this directly - need to wait for rust_tokenizers to support protobuf 3.
# Project code does not directly use protobuf, so no direct dependency needed.

[features]
default = ["cli", "bert"]
cli = ["clap"]
auto-download = ["hf-hub", "tokio"]
gpu = []
bert = []

[[bin]]
name = "psycial"
path = "src/main.rs"
required-features = ["cli"]

# Force dependency versions to fix security vulnerabilities
# Note: protobuf 2.28.0 and protobuf 3.7.2 are different packages with incompatible APIs
# We cannot directly patch protobuf 2.28.0 to 3.7.2
# This is a transitive dependency via rust_tokenizers -> rust-bert
# Waiting for rust_tokenizers to update or use alternative tokenizer library
[patch.crates-io]
# Try to force rust_tokenizers to use a different version if available
# Note: This may not work if rust_tokenizers 8.1.1 hardcodes protobuf 2.28.0

